--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <TextView
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:onClick="createAccount"
             android:layout_marginBottom="40dp"
             android:textSize="14sp"
