--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,13 +16,16 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
   <TextView
-      android:layout_weight="1"
+      android:onClick="RegisterBackArrowClick"
+      android:drawableTint="#FFFFFF"
+      android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
+      android:layout_weight=".5"
       android:layout_width="0dp"
       android:layout_height="match_parent" />
   <TextView
 
       android:id="@+id/RegisterTitleText"
-
+      android:gravity="center"
       android:textSize="18sp"
       android:textColor="#FFFFFF"
       android:text="Register as owner"
@@ -36,7 +39,7 @@
       android:textSize="14sp"
       android:textColor="#FFFFFF"
 
-      android:layout_weight="1"
+      android:layout_weight=".5"
       android:layout_width="0dp"
       android:layout_height="match_parent" />
   </LinearLayout>
