--- a/app/src/main/res/layout/apartment.xml
+++ b/app/src/main/res/layout/apartment.xml
@@ -74,9 +74,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <LinearLayout
+                android:orientation="horizontal"
                 android:gravity="right"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/AblTV"
+                    android:textStyle="bold"
+
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="Available"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                </LinearLayout>
+                <LinearLayout
+                    android:gravity="right"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/DetailsTV"
                     android:layout_marginTop="5dp"
@@ -90,6 +112,7 @@
                     android:backgroundTint="@color/color2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
