--- a/app/src/main/res/layout/fragment_owner_signin.xml
+++ b/app/src/main/res/layout/fragment_owner_signin.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/color2"
     android:layout_height="match_parent"
     tools:context="com.example.shipon.toletbd.fragment.OwnerSigninFragment">
 
@@ -83,26 +84,7 @@
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_marginTop="10dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
 
-                        android:textColor="@color/color2"
-                        android:gravity="center"
-                        android:text="Don,t have account?"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_weight="1"
-                        android:textColor="@color/color2"
-                        android:gravity="center"
-                        android:text="Create Account"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
