--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,8 +3,9 @@
     <item
 
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="All appartment" />
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Search for rent"
+        />
 
     <item
         android:id="@+id/navigation_dashboard"
@@ -13,6 +14,6 @@
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search for rent" />
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="All appartment" />
 </menu>
